CICD/privilage-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  hostNetwork: true
  containers:
  - name: ftp
    image: ubuntu:latest
    securityContext:
            privileged: true
    command: [ "sh", "-c", "sleep 1h" ]
