CICD/test-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: humanz-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: humanz-nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humanz-nginx
spec:
  selector:
    matchLabels:
      app: humanz-nginx
  replicas: 6
  template:
    metadata:
      labels:
        app: humanz-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
